--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
     <title>Vídeos Simultâneos com Tempo Definido</title>
     <script>
         window.onload = function() {
-
+            // Abre ambos os vídeos ao mesmo tempo, começando aos 18 segundos
             window.open("https://www.youtube.com/watch?v=OkscEokV238&t=18s", "_blank");
-
-            setTimeout(function() {
-                window.open("https://www.youtube.com/watch?v=31j4DIpgY9U&list=RDMM&start_radio=1&rv=OkscEokV238", "_blank");
-            }, 23000);  
-          
+            window.open("https://www.youtube.com/watch?v=31j4DIpgY9U&list=RDMM&start_radio=1&rv=OkscEokV238&t=18s", "_blank");
+        }
     </script>
 </head>
 <body>
-    <h1>O primeiro vídeo começará aos 18 segundos e o segundo aos 23 segundos!</h1>
+    <h1>Ambos os vídeos começarão aos 18 segundos simultaneamente!</h1>
 </body>
 </html>
+
