--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt">
 <head>
@@ -70,11 +71,18 @@
         
         <!-- Links para as redes sociais -->
         <div class="social-container">
-            <!-- GitHub -->
+            <!-- Seu GitHub -->
             <p>GitHub Click</p>
             <a href="https://github.com/" target="_blank">
                 <img src="https://skillicons.dev/icons?i=github" alt="GitHub">
             </a>
+
+            <!-- GitHub do Matheus Pimentel -->
+            <p>GitHub Matheus</p>
+            <a href="https://github.com/matheuspimentel04" target="_blank">
+                <img src="https://skillicons.dev/icons?i=github" alt="GitHub Matheus">
+            </a>
+
             <!-- LinkedIn -->
             <p>LinkedIn Click</p>
             <a href="https://www.linkedin.com/in/victor-haonny-novaes-de-araujo-aa3989337?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=web" target="_blank">
