--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             text-align: center;
             font-family: Arial, sans-serif;
-            background-color: black;
+            background-color: #000000; /* Oled preto */
             color: white;
             margin: 0;
             padding: 0;
