--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="social-container">
             <!-- Seu GitHub -->
             <p class="name">Victor</p> <!-- Nome Victor -->
-            <a href="https://github.com/" target="_blank">
+            <a href="https://github.com/victorhaonny" target="_blank">
                 <img src="https://skillicons.dev/icons?i=github" alt="GitHub">
             </a>
 
